forcing a commit